[package]
name = "montycat"
version = "0.1.3"
edition = "2024"

authors = ["MontyGovernance"]
description = "Rust Client for Montycat - High-Performance NoSQL Database. The Fastest, Safest, and Most Elegant Database Client Ever Built in Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"

documentation = "https://docs.rs/montycat"
homepage = "https://montygovernance.com"

keywords = ["database", "nosql", "client", "rust", "async"]
categories = ["database", "asynchronous", "network-programming", "api-bindings"]

[dependencies]
serde = {version = "1", features = ["derive"]}
url = "2.5.7"
serde_json = "1"
tokio = { version = "1", features = ["full", "io-util"] }
simd-json = { version = "0.17.0", features = ["serde_impl"] }
indexmap = { version = "2.12.0", features = ["serde"] }
async-trait = "0.1.88"
xxhash-rust = { version = "0.8.15", features = ["xxh32"]}
rayon = "1.11.0"
montycat_serialization_derive = "0.1.6"

# Optional TLS
tokio-rustls = { version = "0.26", optional = true }
rustls-pki-types = { version = "1.12.0", optional = true }
webpki-roots = { version = "1.0.3", optional = true }

[features]
default = []
tls = ["tokio-rustls", "rustls-pki-types", "webpki-roots"]